iteration and string pattern

--- a/eds-221-day-3-1.qmd
+++ b/eds-221-day-3-1.qmd
@@ -5,6 +5,11 @@ editor: visual
 ---pwd
 ---
 
+```{r}
+library(palmerpenguins)
+library(tidyverse)
+```
+
 ## Conditional statement
 
 ```{r}
@@ -71,5 +76,64 @@ for (i in seq(1:(length(height)-1))) {
 for (i in seq_along(height)) {
   height_div = height[i]/mean(height)
   print(height_div)
+}
+```
+
+## For loop with condition
+
+write a for loop with a conditional (if) statement that returns the means of all NUMERIC variables in the penguins dataset
+
+-   is.numeric (asks is this thing numeric?)
+
+-   mean(vec, na.rm =TRUE)
+
+```{r}
+penguins <- penguins
+
+for (i in seq_along(penguins)) {
+  if (is.numeric(penguins[[i]]))
+  { penguins_mean <- mean(penguins[[i]], na.rm = TRUE) 
+  print(penguins_mean)
+  }}
+
+```
+
+## Functional programming for easier iteration
+
+use apply() to iterate over rows or columns. MARGIN = 1 (rows), MARGIN = 2 (columns)
+
+```{r}
+apply(X = mtcars, MARGIN = 2, FUN = median)
+
+apply(mtcars, 2, median)
+```
+
+## dplyr::accross()
+
+Starter: find the mean flipper length of penguins by species
+
+```{r}
+penguins %>% 
+  group_by(species, sex) %>% 
+  summarize(mean_flipper_length = mean(flipper_length_mm, na.rm = TRUE), 
+            sd_flipper_length = sd(flipper_length_mm, na.rm = TRUE),
+            max_body_mass = max(body_mass_g, na.rm = TRUE))
+```
+
+```{r}
+penguins %>% 
+  group_by(species, island) %>% 
+  summarize(across(where(is.numeric), mean, na.rm = TRUE))
+```
+
+## Detecting a string pattern
+
+```{r}
+food <- "I love enchiladas"
+
+if (str_detect(food, "burritos")) {
+  print("yay burritos!")
+} else {
+  print("what about burritos?")
 }
 ```
